--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,25 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+    <com.fengjw.dispatcheventdemo.MyRelativeLayout
         android:id="@+id/viewgroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
-        <View
+        <com.fengjw.dispatcheventdemo.MyView
             android:id="@+id/view1"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:text="VIEW1"
             android:background="@color/colorPrimary"/>
-    </RelativeLayout>
+    </com.fengjw.dispatcheventdemo.MyRelativeLayout>
 
-    <View
+    <com.fengjw.dispatcheventdemo.MyView2
         android:id="@+id/view2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:clickable="true"
+        android:clickable="false"
         android:background="@color/colorAccent"/>
 
 </LinearLayout>
